test/fail/char-high-surrogate-trap.mo
let _ = word32ToChar 0xdfff
